k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservices-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /meeting
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:

      - path: /
        pathType: Exact
        backend:
          service:
            name: client-service
            port:
              number: 80

      - path: /meeting
        pathType: Prefix
        backend:
          service:
            name: meeting-service
            port:
              number: 80

      - path: /analytics
        pathType: Prefix
        backend:
          service:
            name: analytics-service
            port:
              number: 80

      - path: /blog
        pathType: Prefix
        backend:
          service:
            name: blog-service
            port:
              number: 80

      - path: /polls
        pathType: Prefix
        backend:
          service:
            name: polls-service
            port:
              number: 80

      - path: /sessions
        pathType: Prefix
        backend:
          service:
            name: sessions-service
            port:
              number: 80

      - path: /notification
        pathType: Prefix
        backend:
          service:
            name: notification-service
            port:
              number: 80

      - path: /aahar
        pathType: Prefix
        backend:
          service:
            name: aahar-service
            port:
              number: 80

      - path: /ums
        pathType: Prefix
        backend:
          service:
            name: ums-service
            port:
              number: 80
